--- a/about.html
+++ b/about.html
@@ -14,6 +14,7 @@
     <h1 class="text-uppercase text-center mt-5">We were born to make you happy 🥐😄
     </h1>
     <p class="text-center py-3"><a href="/index.html">Go back</a> to our homepage</p>
+    <p class="text-center"><a href="/contact.html">Contact us!</a></p>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
