--- a/contact.html
+++ b/contact.html
@@ -16,6 +16,7 @@
     </h1>
     <p class="text-center pt-3"><a href="mailto:croissant@eatcroissant.com">Send us an email</a></p>
     <p class="text-center py-3"><a href="/index.html">Go back</a> to our homepage</p>
+    <p class="text-center"><a href="/contact.html">Contact us!</a></p>
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
