--- a/contact.html
+++ b/contact.html
@@ -15,9 +15,11 @@
     <h1 class="text-uppercase text-center mt-5">Contact us if you're having croissant cravings!
     </h1>
     <p class="text-center pt-3"><a href="mailto:croissant@eatcroissant.com">Send us an email</a></p>
-    <p class="text-center py-3"><a href="/index.html">Go back</a> to our homepage</p>
-    <p class="text-center"><a href="/contact.html">Contact us!</a></p>
+    <p class="text-center"><a href="/about.html">Learn more</a> about why you love croissant.</p>
 
+
+    <p class="text-center"><a href="/contact.html">Contact us!</a></p>
+    <p class="text-center pt-5"><a href="/index.html">Go back</a> to our homepage</p>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
