--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
         <div class="row justify-content-center py-5">
             <div class="col-12 col-sm-6">
                 <p class="text-center"><a href="/about.html">Learn more</a> about why you love croissant.</p>
+                <p class="text-center"><a href="/contact.html">Contact us!</a></p>
 
             </div>
         </div>
