added photo.html and image

--- a/contact.html
+++ b/contact.html
@@ -15,7 +15,7 @@
     <h1 class="text-uppercase text-center mt-5">Contact us if you're having croissant cravings!
     </h1>
     <p class="text-center pt-3"><a href="mailto:croissant@eatcroissant.com">Send us an email</a></p>
-    <p class="text-center"><a href="/about.html">Learn more</a> about why you love croissant.</p>
+    <p class="text-center"><a href="/photo.html">Learn more</a> about why you love croissant.</p>
 
     <p class="text-center pt-5"><a href="/index.html">Go back</a> to our homepage</p>
 
