--- a/index.html
+++ b/index.html
@@ -17,11 +17,22 @@
         <div class="row justify-content-center pt-5">
             <div class="col-12 col-sm-6">
                 <img class="img-fluid" src="images/croissant.jpg" alt="croissants">
+                <p class="text-center py-3">For croissant addicts, each day is a tantalizing journey into flaky, buttery
+                    bliss. From the moment they catch a whiff
+                    of the freshly baked aroma, their mouths water in anticipation. The delicate layers, meticulously
+                    crafted by skilled
+                    bakers, offer a symphony of textures that melt upon the tongue. Whether enjoyed plain or filled with
+                    decadent delights
+                    like chocolate, almond paste, or creamy cheese, croissants are the ultimate indulgence. With each
+                    bite, addicts find
+                    themselves transported to a world where time slows down, and all that matters is savoring the
+                    moment. The addiction is
+                    real, and it's a delicious one.</p>
             </div>
         </div>
         <div class="row justify-content-center py-5">
             <div class="col-12 col-sm-6">
-                <p class="text-center"><a href="/photo.html">Learn more</a> about why you love croissant.</p>
+                <p class="text-center"><a href="/photo.html">Click</a> to see us in detail.</p>
                 <p class="text-center"><a href="/contact.html">Contact us!</a></p>
 
             </div>
