changed img width

--- a/photo.html
+++ b/photo.html
@@ -13,7 +13,7 @@
 <body>
     <h1 class="text-uppercase text-center mt-5">We were born to make you happy 🥐😄
     </h1>
-    <img class="img-fluid" src="images/croissants.jpg" alt="croissants">
+    <img class="w-100" src="images/croissants.jpg" alt="croissants">
     <p class="text-center py-3"><a href="/index.html">Go back</a> to our homepage</p>
     <p class="text-center"><a href="/contact.html">Contact us!</a></p>
 
