--- a/contact.html
+++ b/contact.html
@@ -13,7 +13,9 @@
 <body>
 
     <h1 class="text-uppercase text-center mt-5">Contact us if you're having croissant cravings!<br>
-        Calling all croissant addicts! We understand your insatiable craving for the fluffiest, most heavenly pastries
+    </h1>
+    <p class="text-center">Calling all croissant addicts! We understand your insatiable craving for the fluffiest, most
+        heavenly pastries
         that
         grace this planet. We invite you to join our community of croissant enthusiasts, a place where you can share
         your love
@@ -25,8 +27,7 @@
         connect
         with fellow croissant lovers who truly understand your obsession. Together, we'll embark on a delectable journey
         that
-        will leave your taste buds dancing with delight. Join us and let the croissant magic continue!
-    </h1>
+        will leave your taste buds dancing with delight. Join us and let the croissant magic continue!</p>
     <p class="text-center pt-3"><a href="mailto:croissant@eatcroissant.com">Send us an email</a></p>
     <p class="text-center"><a href="/photo.html">Click</a> to see us in detail.</p>
     <p class="text-center pt-5"><a href="/index.html">Go back</a> to our homepage</p>
