--- a/contact.html
+++ b/contact.html
@@ -11,27 +11,31 @@
 </head>
 
 <body>
-
-    <h1 class="text-uppercase text-center mt-5">Contact us if you're having croissant cravings!<br>
-    </h1>
-    <p class="text-center">Calling all croissant addicts! We understand your insatiable craving for the fluffiest, most
-        heavenly pastries
-        that
-        grace this planet. We invite you to join our community of croissant enthusiasts, a place where you can share
-        your love
-        for these golden treats, exchange tips on finding the perfect croissant, and discover new and exciting
-        variations to
-        satisfy your addiction. From discussing the ideal level of buttery goodness to uncovering hidden gem bakeries
-        around the
-        world, our community is dedicated to fueling your passion for all things croissant. Embrace your addiction and
-        connect
-        with fellow croissant lovers who truly understand your obsession. Together, we'll embark on a delectable journey
-        that
-        will leave your taste buds dancing with delight. Join us and let the croissant magic continue!</p>
-    <p class="text-center pt-3"><a href="mailto:croissant@eatcroissant.com">Send us an email</a></p>
-    <p class="text-center"><a href="/photo.html">Click</a> to see us in detail.</p>
-    <p class="text-center pt-5"><a href="/index.html">Go back</a> to our homepage</p>
-
+    <div class="container">
+        <h1 class="text-uppercase text-center mt-5">Contact us if you're having croissant cravings!<br>
+        </h1>
+        <p class="text-center">Calling all croissant addicts! We understand your insatiable craving for the fluffiest,
+            most
+            heavenly pastries
+            that
+            grace this planet. We invite you to join our community of croissant enthusiasts, a place where you can share
+            your love
+            for these golden treats, exchange tips on finding the perfect croissant, and discover new and exciting
+            variations to
+            satisfy your addiction. From discussing the ideal level of buttery goodness to uncovering hidden gem
+            bakeries
+            around the
+            world, our community is dedicated to fueling your passion for all things croissant. Embrace your addiction
+            and
+            connect
+            with fellow croissant lovers who truly understand your obsession. Together, we'll embark on a delectable
+            journey
+            that
+            will leave your taste buds dancing with delight. Join us and let the croissant magic continue!</p>
+        <p class="text-center pt-3"><a href="mailto:croissant@eatcroissant.com">Send us an email</a></p>
+        <p class="text-center"><a href="/photo.html">Click</a> to see us in detail.</p>
+        <p class="text-center pt-5"><a href="/index.html">Go back</a> to our homepage</p>
+    </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
         crossorigin="anonymous"></script>
