--- a/photo.html
+++ b/photo.html
@@ -11,10 +11,10 @@
 </head>
 
 <body>
-    <div class="container croissant-img">
+    <div class="container">
         <h1 class="text-uppercase text-center mt-5 text-white">We were born to make you happy 🥐😄
         </h1>
-
+        <img src="images/croissants.jpg" alt="croissants">
         <p class="text-center py-3"><a href="/index.html">Go back</a> to our homepage</p>
         <p class="text-center"><a href="/contact.html">Contact us!</a></p>
     </div>
